# ml-bird-classification

./: .env.example  .gitignore  Makefile  README.md  docker-compose.pi.yml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  deploy.yml
catalog/: Dockerfile  alembic.ini  config.yaml
catalog/api/: db.py  main.py
catalog/api/ebird/: audit.py  client.py  sync.py  validator.py
catalog/api/models/: detection.py  ebird.py  species.py
catalog/api/routes/: detections.py  ebird.py  search.py  species.py
catalog/migrations/: env.py
dashboard/: prometheus.yml
dashboard/sightings/: README.md  sightings.component.ts  sightings.service.ts  vercel.json
docs/: API.md
infra/scripts/: deploy.sh
infra/terraform/: main.tf  variables.tf
model/: Dockerfile  evaluate.py  export_onnx.py  train.py
model/config/: training_config.yaml
model/src/: dataset.py  model.py  transforms.py  utils.py
pipeline/flink/: Dockerfile  config.yaml
pipeline/ingestion/: Dockerfile  config.yaml  extractor.py
pipeline/spark/: Dockerfile  config.yaml
pipeline/worker/: Dockerfile  config.yaml  inference_worker.py
serving/: Dockerfile  config.properties  handler.py
streaming/: README.md  birdcam-stream.service  nginx-hls.conf  start_stream.sh
tests/: conftest.py
tests/integration/: e2e_test.py
tests/unit/: test_audit.py  test_catalog_api.py  test_ebird_client.py  test_ebird_models.py  test_ebird_serde.py  test_model.py  test_serde.py  test_sync.py  test_transforms.py  test_utils.py  test_validator.py
tools/: bootstrap_model.py  e2e_test.py
(+22 files in other folders)
